--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,17 +1,38 @@
 body {
-  font-family: "Futura PT", sans-serif;
+  font-family: "futura-pt", sans-serif;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-transform: uppercase;
+}
+
+:root {
+  --max-content-width: 1024px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Futura PT", sans-serif;
+  font-family: "futura-pt", sans-serif;
   font-weight: 500;
+  text-transform: uppercase;
 }
 
 a, p {
-  font-family: "Futura PT", sans-serif;
+  font-family: "futura-pt", sans-serif;
   font-weight: 400;
   line-height: 1.6;
+}
+
+/* Ensure all buttons, inputs, etc. also use futura-pt */
+button, input, select, textarea, span, div {
+  font-family: "futura-pt", sans-serif;
+}
+
+a, button, .navLink, nav a {
+  text-transform: uppercase;
+}
+
+.header-inner,
+.content-inner {
+  max-width: var(--max-content-width);
+  margin: 0 auto;
 } 
