--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -4,6 +4,8 @@
   min-height: 100vh;
   position: relative;
   overflow: hidden;
+  max-width: var(--max-content-width);
+  margin: 0 auto;
 }
 
 .leftSection {
