--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -20,6 +20,7 @@
   box-sizing: border-box;
 }
 
+
 .logo {
   width: 200px !important;
   min-width: 200px !important;
@@ -76,6 +77,7 @@ header .logo {
   max-width: 400px;
 }
 
+
 .nav {
   display: flex;
   flex-direction: column;
@@ -131,3 +133,20 @@ header .logo {
 .navLinkActive::after {
   transform: scaleX(1);
 } 
+
+
+@media (max-width: 768px) {
+  .info p {
+    max-width: 100%;
+    color: white;
+  }
+  .logo {
+    filter: brightness(0) invert(1) !important;
+  }
+  .navLink {
+    color: white;
+  }
+  .navLink::after {
+    background-color: white;
+  }
+}
