--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -112,10 +112,14 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 50%;
+  width: 100%;
   height: 1px;
   background-color: black;
   transform: scaleX(1);
+}
+
+.white.navLinkActive .navText::after {
+  background-color: white;
 }
 
 /* Logo */
