--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,6 +1,6 @@
 /* Define default CSS variables that can be overridden */
 :root {
-  --header-max-width: 992px;
+  --header-max-width: var(--max-content-width);
   --header-bg-color: transparent;
 }
 
@@ -12,7 +12,7 @@
   max-width: var(--header-max-width);
   width: 100%;
 
-  @media (max-width: 992px) {
+  @media (max-width: 1200px) {
     padding-left: 1rem;
     padding-right: 1rem;
   }
@@ -112,7 +112,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 50%;
   height: 1px;
   background-color: black;
   transform: scaleX(1);
