--- a/src/pages/contact.module.css
+++ b/src/pages/contact.module.css
@@ -48,6 +48,7 @@
     letter-spacing: 0.05em;
     font-weight: 300;
     text-align: justify;
+    text-justify: inter-word;
     text-transform: uppercase;
     margin-bottom: 2rem;
   }
