--- a/src/pages/contact.module.css
+++ b/src/pages/contact.module.css
@@ -15,6 +15,14 @@
     
   }
 
+  .contactLink {
+    color: inherit;
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
   .headerInner {
     padding-left: var(--contact-padding);
     padding-right: 2rem;
@@ -75,8 +83,8 @@
   }
   
   .partnerLogo {
+    height: 60px;
     max-width: 120px;
-    height: auto;
   }
   
   @media screen and (max-width: 992px) {
@@ -89,15 +97,13 @@
     .contactContentWrapper {
       --contact-padding: var(--contact-padding-mobile);
     }
+
+    img.invert {
+      filter: brightness(0) invert(1);
+    }
   
     .studioText {
       font-size: 1rem;
-    }
-    
-    .partnerLogos {
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 1rem;
     }
   } 
 }
