--- a/src/components/SplitScreen.module.css
+++ b/src/components/SplitScreen.module.css
@@ -24,6 +24,32 @@
   overflow: hidden;
 }
 
+/* Video background styles */
+.videoBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  overflow: hidden;
+}
+
+.backgroundVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hasVideoBackground::before {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 /* Media query for responsive layouts */
 @media (max-width: 768px) {
   .container {
