--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -94,6 +94,41 @@ header .logo {
   overflow: hidden;
 }
 
+/* Video styles */
+.videoWrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.homeVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* Mobile video background styles */
+.mobileVideoBackground {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -2;
+  overflow: hidden;
+}
+
+.mobileBackgroundVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .fullImage {
   position: absolute !important;
   top: 0;
@@ -150,5 +185,10 @@ header .logo {
   }
   .navLink::after {
     background-color: white;
+  }
+  
+  /* Display the mobile video background on mobile */
+  .mobileVideoBackground {
+    display: block;
   }
 }
