--- a/src/components/SplitScreen.module.css
+++ b/src/components/SplitScreen.module.css
@@ -1,3 +1,13 @@
+:root {
+  --full-screen-left-section-padding: 4rem;
+}
+
+@media screen and (max-width: 992px) {
+  :root {
+    --full-screen-left-section-padding: 2rem;
+  }
+}
+
 .container {
   display: grid;
   min-height: 100vh;
@@ -16,6 +26,7 @@
   height: 100vh;
   overflow: auto;
   box-sizing: border-box;
+  padding: var(--full-screen-left-section-padding);
 }
 
 .rightSection {
