feat: header fixes

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -2,7 +2,6 @@
 :root {
   --header-max-width: var(--max-content-width);
   --header-bg-color: transparent;
-  --header-padding: 1rem;
 }
 
 /* Basic styles with low specificity */
@@ -12,6 +11,8 @@
   padding-bottom: 1rem;
   max-width: var(--header-max-width);
   width: 100%;
+  padding-left: var(--header-padding);
+  padding-right: var(--header-padding);
 }
 
 /* Header inner */
