--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,12 +3,16 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-transform: uppercase;
+  text-transform: uppercase;  
 }
+
+
 
 :root {
   /* Layout */
   --max-content-width: 1200px;
+  --full-screen-left-section-padding: 4rem;
+  --header-padding: 0; 
   
   /* Colors */
   --mobile-background-color: #464446; /* Dark grayish magenta for mobile background */
@@ -49,6 +53,19 @@ body {
   --size-gap: var(--space-6);
 }
 
+@media (max-width: 1200px) {
+  :root {
+    --header-padding: 1rem;
+  }
+}
+
+@media (max-width: 992px) {
+  :root {
+    --full-screen-left-section-padding: 1rem;
+  }
+}
+
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "futura-pt", sans-serif;
   font-weight: 500;
@@ -77,7 +94,6 @@ html {
   font: sans-serif;
   font-size: var(--font-md);
   line-height: var(--line-height-normal);
-  overflow-y: scroll;
 }
 
 body {
