--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,6 +66,12 @@ body {
   }
 }
 
+@media (max-width: 768px) {
+  .logo {
+    filter: brightness(0) invert(1) !important;
+  }
+}
+
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "futura-pt", sans-serif;
