--- a/src/components/Slider.module.css
+++ b/src/components/Slider.module.css
@@ -20,14 +20,21 @@
   background: transparent;
 }
 
+@media screen and (max-width: 768px) {
+  .sliderContainer {
+    min-height: calc(100vh - 111.2px);
+  }
+  .sliderTrackContainer {
+    min-height: calc(100vh - 111.2px);
+  }
+}
+
 /* Container for the slider track that contains the slides */
 .sliderTrackContainer {
   width: 100%;
   max-width: var(--max-content-width, 1200px);
   margin: 0 auto;
   overflow: hidden;
-  min-height: 600px;
-  max-height: 800px;
   height: 100%;
   padding: 0;
   background: transparent;
