--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -177,8 +177,8 @@
 
 /* Mobile menu */
 .mobileMenu {  
-  position: fixed;
-  top: calc(1.45rem * 2 + 30px);
+  position: absolute;
+  top: 100%;
   left: 0;
   width: 100%;
   height: calc(100vh - (1.45rem * 2 + 30px));
@@ -206,9 +206,6 @@
 @media (max-width: 992px) {
   .mobileMenuButton {
     display: block;
-    position: fixed;
-    top: 1.45rem;
-    right: 1.0875rem;
     z-index: 9999;
   }
   
@@ -219,18 +216,27 @@
 
 @media (max-width: 768px) {
   .headerWrapper {
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: var(--mobile-background-color);
   }
+  
   .desktopNav {
     display: none;
   }
   
   .mobileMenuButton {
     display: block;
+    position: relative;
   }
   
   .mobileMenu {
     display: flex;
+    height: calc(100vh - 100%);
   }
   
   .navText::after, 
