--- a/src/templates/visualization.module.css
+++ b/src/templates/visualization.module.css
@@ -18,6 +18,14 @@
   @media (max-width: 992px) {
     padding: 0 1rem;
   }
+
+
+}
+
+@media screen and (max-width: 768px) {
+  .descriptionColumn {
+    min-height: auto;
+  }
 }
 
 /* Right column - Slider (3/4 width) */
@@ -51,7 +59,7 @@
   }
   
   .descriptionColumn {
-    min-height: 120px;
+    padding: 1rem;
   }
 
   .sliderColumn {
