--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -160,6 +160,7 @@
   width: 100%;
   height: 100%;
   background-color: white;
+  opacity: 0.999;
   z-index: 9999;
   display: flex;
   justify-content: center;
