--- a/src/components/SplitScreen.module.css
+++ b/src/components/SplitScreen.module.css
@@ -103,6 +103,11 @@
   }
   
   .rightSection {
-    display: none; /* Hide the right section on mobile */
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
   }
 } 
