--- a/src/templates/interior.module.css
+++ b/src/templates/interior.module.css
@@ -129,3 +129,10 @@
       background-color: rgba(255, 255, 255, 0.1);
     }
   } 
+
+  .description {
+    margin-top: 1rem;
+    font-size: 0.8rem;
+    font-weight: 500;
+    word-break: break-word;
+  }
