--- a/src/templates/common.module.css
+++ b/src/templates/common.module.css
@@ -46,6 +46,7 @@
     justify-content: center;
     text-align: left;
     width: 100%;
+    padding-right: 3rem;
     max-width: 400px;
   }
   
@@ -64,7 +65,10 @@
     margin-top: 1rem;
     font-size: 0.8rem;
     font-weight: 500;
-    word-break: break-word;
+    word-break: keep-all;
+    white-space: pre-wrap;
+    text-align: justify;
+    text-justify: distribute;
   }
   
   /* Back Button Styling */
