--- a/src/components/Slider.module.css
+++ b/src/components/Slider.module.css
@@ -22,10 +22,15 @@
 
 @media screen and (max-width: 768px) {
   .sliderContainer {
-    min-height: calc(100vh - 130px);
+    min-height: calc(100vh - 90px);
   }
   .sliderTrackContainer {
     min-height: calc(100vh - 130px);
+  }
+  .itemWrapper.clickable:hover {
+    transform: none;
+    cursor: default;
+    opacity: 0;
   }
 }
 
